// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#ComponentName should render breadcrumb correctly for APP 1`] = `
<span
  aria-label="code.parent_folder"
  className="max-width-100 display-inline-block text-ellipsis"
  title="Foo

foo"
>
  <span>
    <QualifierIcon
      qualifier="APP"
    />
     
    Foo
  </span>
</span>
`;

exports[`#ComponentName should render breadcrumb correctly for SVW 1`] = `
<span
  aria-label="code.parent_folder"
  className="max-width-100 display-inline-block text-ellipsis"
  title="Foo

foo"
>
  <span>
    <QualifierIcon
      qualifier="SVW"
    />
     
    Foo
  </span>
</span>
`;

exports[`#ComponentName should render breadcrumb correctly for TRK 1`] = `
<span
  aria-label="code.parent_folder"
  className="max-width-100 display-inline-block text-ellipsis"
  title="Foo

foo"
>
  <span>
    <QualifierIcon
      qualifier="TRK"
    />
     
    Foo
  </span>
</span>
`;

exports[`#ComponentName should render breadcrumb correctly for TRK 2`] = `
<span
  aria-label="code.parent_folder"
  className="max-width-100 display-inline-block text-ellipsis"
  title="Foo

foo"
>
  <span>
    <QualifierIcon
      qualifier="TRK"
    />
     
    Foo
  </span>
</span>
`;

exports[`#ComponentName should render breadcrumb correctly for VW 1`] = `
<span
  aria-label="code.parent_folder"
  className="max-width-100 display-inline-block text-ellipsis"
  title="Foo

foo"
>
  <span>
    <QualifierIcon
      qualifier="VW"
    />
     
    Foo
  </span>
</span>
`;

exports[`#ComponentName should render correctly for dirs 1`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/main/ts/app

foo"
>
  <span>
    <QualifierIcon
      qualifier="DIR"
    />
     
    <span>
      <span
        style={
          Object {
            "color": "#666",
          }
        }
      >
        src/main/ts/
      </span>
      <span>
        app
      </span>
    </span>
  </span>
</span>
`;

exports[`#ComponentName should render correctly for dirs 2`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src

foo"
>
  <span>
    <QualifierIcon
      qualifier="DIR"
    />
     
    src
  </span>
</span>
`;

exports[`#ComponentName should render correctly for files 1`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/index.tsx

foo:src/index.tsx"
>
  <span>
    <QualifierIcon
      qualifier="FIL"
    />
     
    index.tsx
  </span>
</span>
`;

exports[`#ComponentName should render correctly for files 2`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/index.tsx

foo:src/index.tsx"
>
  <Link
    className="link-with-icon"
    to={
      Object {
        "pathname": "/code",
        "search": "?id=foo&selected=foo%3Asrc%2Findex.tsx",
      }
    }
  >
    <QualifierIcon
      qualifier="FIL"
    />
     
    <span>
      index.tsx
    </span>
  </Link>
</span>
`;

exports[`#ComponentName should render correctly for files 3`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/index.tsx

foo:src/index.tsx"
>
  <span>
    <QualifierIcon
      qualifier="FIL"
    />
     
    index.tsx
  </span>
</span>
`;

exports[`#ComponentName should render correctly for files 4`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/index.tsx

foo:src/index.tsx"
>
  <span>
    <QualifierIcon
      qualifier="FIL"
    />
     
    index.tsx
  </span>
</span>
`;

exports[`#ComponentName should render correctly for files 5`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/index.tsx

foo:src/index.tsx"
>
  <span>
    <QualifierIcon
      qualifier="FIL"
    />
     
    index.tsx
  </span>
</span>
`;

exports[`#ComponentName should render correctly for files 6`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/index.tsx

foo:src/index.tsx"
>
  <span>
    <QualifierIcon
      qualifier="FIL"
    />
     
    index.tsx
  </span>
</span>
`;

exports[`#ComponentName should render correctly for files 7`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="src/index.tsx

foo:src/index.tsx"
>
  <span>
    <QualifierIcon
      qualifier="FIL"
    />
     
    index.tsx
  </span>
</span>
`;

exports[`#ComponentName should render correctly for refs 1`] = `
<span
  className="max-width-100 display-inline-block text-ellipsis"
  title="Foo

foo

foo"
>
  <Link
    className="link-with-icon"
    to={
      Object {
        "pathname": "/dashboard",
        "search": "?id=src%2Fmain%2Fts%2Fapp&code_scope=new",
      }
    }
  >
    <QualifierIcon
      qualifier="TRK"
    />
     
    <span>
      Foo
    </span>
  </Link>
</span>
`;

exports[`#ComponentName should render correctly for refs 2`] = `
<span
  className="max-width-100 display-inline-flex-center"
>
  <span
    className="text-ellipsis"
    title="Foo

foo

foo"
  >
    <Link
      className="link-with-icon"
      to={
        Object {
          "pathname": "/dashboard",
          "search": "?id=src%2Fmain%2Fts%2Fapp&branch=foo&code_scope=new",
        }
      }
    >
      <QualifierIcon
        qualifier="TRK"
      />
       
      <span>
        Foo
      </span>
    </Link>
  </span>
  <span
    className="text-ellipsis spacer-left"
  >
    <BranchIcon
      className="little-spacer-right"
    />
    <span
      className="note"
    >
      foo
    </span>
  </span>
</span>
`;

exports[`#ComponentName should render correctly for refs 3`] = `
<span
  className="max-width-100 display-inline-flex-center"
>
  <span
    className="text-ellipsis"
    title="Foo

foo"
  >
    <Link
      className="link-with-icon"
      to={
        Object {
          "pathname": "/dashboard",
          "search": "?id=src%2Fmain%2Fts%2Fapp&code_scope=new",
        }
      }
    >
      <QualifierIcon
        qualifier="TRK"
      />
       
      <span>
        Foo
      </span>
    </Link>
  </span>
  <span
    className="spacer-left badge flex-1"
  >
    branches.main_branch
  </span>
</span>
`;

exports[`#getTooltip should correctly format component information 1`] = `
"src/index.tsx

foo:src/index.tsx"
`;

exports[`#getTooltip should correctly format component information 2`] = `
"src/index.tsx

foo:src/index.tsx"
`;

exports[`#getTooltip should correctly format component information 3`] = `
"index.tsx

foo:src/index.tsx"
`;

exports[`#getTooltip should correctly format component information 4`] = `
"Foo

foo"
`;
